# ontouml-json2graph

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  build_package.py  globals.py  main.py  ontouml_json2graph.py  pyproject.toml  requirements.txt  setup_metadata.py  update_documentation.py
.github/workflows/: bots-auto-merge.yml  code_formatting.yml  code_testing.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  pre-commit-ci-auto-merge.yml  scorecard.yml  update_docs.yml  update_documentation.yml
docs/: .buildinfo  README.html  genindex.html  index.html  json2graph.html  json2graph.modules.decoder.html  json2graph.modules.html  main.html  modules.decoder.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  json2graph.modules.decoder.rst.txt  json2graph.modules.rst.txt  json2graph.rst.txt  modules.decoder.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
docs/autoapi/: index.html
json2graph/: __init__.py  __main__.py  decode.py  json2graph.py  lib.py  lib_json2graph.py  library.py  main.py  main_decode.py  requirements.txt  run_json2graph.py
json2graph/decoder/: decode_general.py  decode_main.py  decode_obj_class.py  decode_obj_diagram.py  decode_obj_elementview.py  decode_obj_generalization.py  decode_obj_generalizationset.py  decode_obj_package.py  decode_obj_path.py  decode_obj_project.py  decode_obj_property.py  decode_obj_rectangularshape.py  decode_obj_relation.py
json2graph/modules/: arguments.py  errors.py  globals.py  input_output.py  logger.py  messages.py  metadata.py  sparql_queries.py  utils_general.py  utils_graph.py  utils_validations.py
json2graph/resources/: metadata.yaml  ontouml_v1.0.0.ttl  ontouml_v1.1.0.ttl  ontouml_v100.ttl  ontouml_v110.ttl
json2graph/tests/: test_aux.py  test_main.py
modules/: arguments.py  decode.py  errors.py  globals.py  input_output.py  logger.py  messages.py  sparql_queries.py  utils.py  utils_general.py  utils_graph.py
modules/decoder/: decode_general.py  decode_main.py  decode_obj_class.py  decode_obj_classview.py  decode_obj_diagram.py  decode_obj_elementview.py  decode_obj_generalization.py  decode_obj_generalizationset.py  decode_obj_package.py  decode_obj_path.py  decode_obj_project.py  decode_obj_property.py  decode_obj_rectangle.py  decode_obj_rectangularshape.py  decode_obj_relation.py  decode_project.py  decode_utils.py  decoder_obj_generalization.py  decoder_obj_generalizationset.py  decoder_obj_relation.py
resources/: ontouml.ttl  ontouml_v110.ttl
sphinx/: conf.py  index.html  index.rst  make.bat  modules.rst  remake.bat
test/: Tests.xlsx  test_001.json
tests/: test_aux.py  test_clear.py  test_main.py
tests/test_files/: List of Tests.xlsx  test_001.ttl  test_002.json  test_002.ttl  test_003.json  test_003.ttl  test_003.vpp  test_004.json  test_004.ttl  test_005.json  test_005.ttl  test_006.json  test_006.ttl  test_007.json  test_007.ttl  test_008.json  test_008.ttl  test_009.json  test_009.ttl  test_009.vpp  test_010.json  test_010.ttl  test_011.json  test_011.ttl  test_012.ttl  (+84 more)
(+260 files in other folders)
